<resources>
    <string name="_0_00">0.00</string>
    <string name="_10_00_oz">10.00 Oz</string>
    <string name="_117_00">$117.00</string>
    <string name="_continue">Continue</string>
    <string name="_switch">Switch</string>
    <string name="about_us">About Us</string>
    <string name="accept_offers">Accept Offers</string>
    <string name="account">Account</string>
    <string name="activity">Activity</string>
    <string name="add_another_product">Add another Product</string>
    <string name="add_more_products">Add More Products</string>
    <string name="add_product">Add Product</string>
    <string name="add_starting_price_range_if_applicable">Add starting price range if applicable</string>
    <string name="add_up_to_8_photos">Add up to 8 photos</string>
    <string name="add_variants">Add Variants</string>
    <string name="added_product">Added Product</string>
    <string name="allow_offers">Allow Offers</string>
    <string name="app_name">Bidswipe</string>
    <string name="auction">Auction</string>
    <string name="auction_type">Auction Type</string>
    <string name="back">Back</string>
    <string name="be_specific_about_what_you_re_auctioning_e_g_quot_vintage_jewelry_collection_quot">Be specific about what you\'re auctioning (e.g., &quot;Vintage Jewelry Collection&quot;)</string>
    <string name="become_a_bidswipe_seller">Become a Bidswipe Seller</string>
    <string name="better_promotion_opportunities">Better promotion opportunities</string>
    <string name="bids">Bids</string>
    <string name="bidswipe_calculates_shipping_fees_based_on_the_product_weight_you_can_adjust_this_later_if_needed">Bidswipe calculates shipping fees based on the product weight. You can adjust this later if needed.</string>
    <string name="bio">Bio</string>
    <string name="buy_it_now_price">Buy It Now Price</string>
    <string name="cancel">Cancel</string>
    <string name="caption">Caption</string>
    <string name="play_pause">Play/Pause</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="subtitles_on">Subtitles On</string>
    <string name="subtitles_off">Subtitles Off</string>
    <string name="category">Category</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_to_next_step">Continue to Next Step</string>
    <string name="copy">Copy</string>
    <string name="coupons">Coupons</string>
    <string name="create_account">Create Account</string>
    <string name="credits">Credits</string>
    <string name="blocked_message">You cannot send messages to this chat.</string>
    <string name="describe_your_product">Describe your product</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="enable_allow_offers_to_let_buyers_offer_a_different_price_for_your_product_you_may_counter_accept_or_simply_decline_the_offer">Enable Allow Offers to let buyers offer a different price for your product. You may counter, accept, or simply decline the offer.</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_product_title">Enter product title</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_your_confirm_password">Enter Your Confirm Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_show_title">Enter your show title</string>
    <string name="example_preview">Example Preview</string>
    <string name="exit">Exit</string>
    <string name="explore">Explore</string>
    <string name="finish">Finish</string>
    <string name="first_name">First Name</string>
    <string name="flash_sell">Flash Sell</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">Full Name</string>
    <string name="goods_examples">Good Examples</string>
    <string name="hazardous_material">Hazardous Material</string>
    <string name="home">Home</string>
    <string name="how_it_works">How It Works</string>
    <string name="i_agree_to_follow_these_guidelines_and_understand_that_violations_may_result_in_account_suspension">I agree to follow these guidelines and understand that violations may result in account suspension</string>
    <string name="include_key_details_like_brand_names_or_unique_features">Include key details like brand names or unique features</string>
    <string name="invite_friends_and_earn_rewards_when_they_join">Invite friends and earn rewards when they join</string>
    <string name="item_weight">Item Weight</string>
    <string name="items">Items</string>
    <string name="items_containing_flammable_explosive_or_other_dangerous_materials_learn_more_about_hazardous_materials">Items containing flammable, explosive, or other dangerous materials. Learn more about hazardous materials</string>
    <string name="last_name">Last Name</string>
    <string name="let_others_know_who_you_are">Let others know who you are?</string>
    <string name="live_now">Live Now</string>
    <string name="login">Login</string>
    <string name="managing_orders_amp_shipping"><![CDATA[Managing orders & shipping]]></string>
    <string name="mention_if_it_s_a_special_event_e_g_quot_holiday_special_quot">Mention if it\'s a special event (e.g., &quot;Holiday Special&quot;)</string>
    <string name="messages">Messages</string>
    <string name="mic_test">Mic Test</string>
    <string name="minimum_starting_bid_is_1_00">Minimum starting bid is $1.00</string>
    <string name="my_account">My Account</string>
    <string name="need_help_contact_our_support_team">Need help? Contact our support team</string>
    <string name="new_user">New User?</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_cancel">No Cancel..</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_internet">There is no internet connection.\nPlease connect to the internet and try again</string>
    <string name="offers">Offers</string>
    <string name="oz">Oz</string>
    <string name="password">Password</string>
    <string name="pick_a_date_and_time_for_your_live_show">Pick a date and time for your live show</string>
    <string name="for_you_tile">For You</string>
    <string name="see_all_categories_tile">See All&#10;Categories</string>
    <string name="please_enter_the_email_address_associated_with_your_account">Please enter the email address associated with your account.</string>
    <string name="privacy_policy">Privacy Policy </string>
    <string name="products">Products</string>
    <string name="publish">Publish</string>
    <string name="purchases">Purchases</string>
    <string name="quantity_available">Quantity Available</string>
    <string name="rating">Rating</string>
    <string name="rehearsal">Rehearsal</string>
    <string name="remember_me">Remember Me</string>
    <string name="reserve_for_live">Reserve for Live</string>
    <string name="reset_password">Reset Password</string>
    <string name="retry">Retry</string>
    <string name="revenue">Revenue</string>
    <string name="save_draft">Save Draft</string>
    <string name="saved_items">Saved Items</string>
    <string name="schedule_your_first_show">Schedule your first show</string>
    <string name="select_a_category">Select a Category</string>
    <string name="select_auction_type">Select auction type</string>
    <string name="select_category">Select Category</string>
    <string name="select_format">Select Format</string>
    <string name="select_profile">Select Profile</string>
    <string name="select_the_category_the_most_accurately_describes_your_show_and_how_you_would_like_to_sell">Select the category the most accurately describes your show, and how you would like to sell.</string>
    <string name="select_time">Select Time</string>
    <string name="seller_hub">Seller Hub</string>
    <string name="sell">Sell</string>
    <string name="sell_on_bidswipe">Sell On Bidswipe</string>
    <string name="set_a_competitive_starting_price_that_will_attract_potential_buyers_a_well_priced_item_increases_your_chances_of_a_successful_sale_and_can_lead_to_better_bidding_activity">Set a competitive starting price that will attract potential buyers. A well-priced item increases your chances of a successful sale and can lead to better bidding activity.</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="setting_up_your_store">Setting up your store</string>
    <string name="share_amp_earn_reward"><![CDATA[Share & Earn Reward]]></string>
    <string name="shipping_profile">Shipping Profile</string>
    <string name="shop">Shop</string>
    <string name="show_category">Show Category</string>
    <string name="show_details">Show Details</string>
    <string name="show_time_00_00_01">Show Time: 00:00:00</string>
    <string name="show_title">Show Title</string>
    <string name="sound">Sound</string>
    <string name="start_bid">Start Bid</string>
    <string name="start_your_selling_journey_on_bidswipe_learn_how_to_list_products_manage_your_store_and_connect_with_buyers">Start your selling journey on Bidswipe! Learn how to list products, manage your store, and connect with buyers.</string>
    <string name="step_1_of_7">Step 1 of 7</string>
    <string name="stream_title">Stream title</string>
    <string name="submit">Submit</string>
    <string name="success_please_enter_the_code_that_was_sent_to_the_email_associated_with_your_account">Success! Please enter the code that was sent to the email associated with your account.</string>
    <string name="success_please_enter_your_new_password_below">Success! Please enter your new password below.</string>
    <string name="tap_to_upload_thumbnail">Tap to upload thumbnail</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="terms_of_service"> | Terms of Service</string>
    <string name="this_is_my_message">This is my message</string>
    <string name="time_to_prepare_your_items_properly">Time to prepare your items properly</string>
    <string name="tips_for_a_great_thumbnail">Tips for a Great Thumbnail</string>
    <string name="tips_for_a_great_title">Tips for a Great Title</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="vacation_mode">Vacation Mode</string>
    <string name="verify_code">Verify Code</string>
    <string name="weight_0_00">0.00</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="what_you_ll_learn">What you\'ll learn:</string>
    <string name="why_scedule_in_advance">Why Schedule in Advance?</string>
    <string name="yes">Yes</string>
    <string name="your_referral_link">Your Referral Link</string>
    <string name="obs_open_broadcast_software_is_a_free_streaming_and_recording_program_that_lets_you_share_your_live_content_with_your_audience">OBS (Open Broadcast Software) is a free streaming and recording program that lets you share your live content with your audience.</string>
    <string name="more_info"><u>More Info</u></string>
    <string name="shows">Shows</string>
    <string name="reviews">Reviews</string>
    <string name="clips">Clips</string>
    <string name="submit_report">Submit Report</string>
    <string name="tell_us_more">Tell us more</string>
    <string name="write_something">Write Something</string>
</resources>