<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/explore"
        android:title="@string/explore"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sellFragment"
        android:icon="@drawable/ic_plus"
        android:title="@string/sell"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/activityFragment"
        android:icon="@drawable/heart_ic"
        android:title="@string/activity"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/person"
        android:title="@string/account"
        app:showAsAction="ifRoom" />

</menu>