<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.OTPFragment">

    <io.bidswipe.app.ui.custom.Header
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerMode="BACK_BUTTON_TITLE_ACTION"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:headerTitle="@string/verify_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/desc"
            style="@style/BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/success_please_enter_the_code_that_was_sent_to_the_email_associated_with_your_account" />

        <TextView
            style="@style/TitleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/half_margin"
            android:text="@string/enter_code" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                style="@style/inputTextStyle"
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_code"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            style="@style/appBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin"
            android:text="@string/submit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit"
            style="@style/appBtnOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:visibility="gone" />

    </LinearLayout>

    <io.bidswipe.app.ui.custom.LoaderView
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />




</androidx.constraintlayout.widget.ConstraintLayout>