<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_back"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding"
    android:paddingVertical="32dp">

    <TextView
        android:id="@+id/report_heading"
        style="@style/TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/report_user"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinnerBox2"
        style="@style/inputBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        app:endIconDrawable="@drawable/ic_down_arrow"
        app:endIconMode="dropdown_menu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spinner2"
            style="@style/inputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:textAppearance="@color/inverseSurface" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/tell_us_more" />

    <EditText
        android:id="@+id/weeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/card_8_outline"
        android:gravity="top"
        android:hint="@string/write_something"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:padding="12dp" />

    <Button
        android:id="@+id/submit"
        style="@style/appBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/submit_report" />

</LinearLayout>